# tpchgen-rs

./: CONTRIBUTING.md  Cargo.toml
.github/workflows/: conformance.yml  tpchgen-cli-publish-pypi.yml  tpchgen-publish-crates.yml
tpchgen-arrow/: Cargo.toml
tpchgen-arrow/src/: customer.rs  lineitem.rs  nation.rs  order.rs  part.rs  partsupp.rs  region.rs  supplier.rs
tpchgen-cli/: Cargo.toml
tpchgen-cli/src/: iceberg.rs  main.rs  plan.rs
tpchgen-iceberg/: Cargo.toml  README.md
tpchgen-iceberg/src/: catalog.rs  config.rs  generator.rs  lib.rs  tables.rs
