[package]
name = "tpchgen-iceberg"
version = "1.1.1"
edition = "2021"
authors = ["clflushopt", "alamb"]
description = "TPC-H data generator into Apache Iceberg format"
repository = "https://github.com/clflushopt/tpchgen-rs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
iceberg = "0.5"
iceberg-catalog-memory = "0.5"
iceberg-catalog-rest = "0.5"
iceberg-catalog-glue = "0.5"
tpchgen = { path = "../tpchgen", version = "1.1.1" }
tpchgen-arrow = { path = "../tpchgen-arrow", version = "1.1.1" }
arrow = { version = "55.2", default-features = false }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
tempfile = "3.0"