[package]
name = "tpchgen-iceberg"
version = "1.1.1"
edition = "2021"
authors = ["clflushopt", "alamb"]
description = "TPC-H data generator into Apache Iceberg format"
repository = "https://github.com/clflushopt/tpchgen-rs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
iceberg = { path = "../../iceberg-rust/crates/iceberg" }
iceberg-catalog-memory = { path = "../../iceberg-rust/crates/catalog/memory" }
iceberg-catalog-rest = { path = "../../iceberg-rust/crates/catalog/rest" }
iceberg-catalog-glue = { path = "../../iceberg-rust/crates/catalog/glue" }
tpchgen = { path = "../tpchgen", version = "1.1.1" }
tpchgen-arrow = { path = "../tpchgen-arrow", version = "1.1.1" }
arrow = { version = "55.2", default-features = false }
parquet = { version = "55.2", default-features = false }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
tempfile = "3.0"