[package]
name = "tpchgen-iceberg"
version = "1.1.1"
edition = "2021"
description = "TPC-H data generator into Apache Iceberg format"
repository = "https://github.com/clflushopt/tpchgen-rs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
#iceberg = { version = "0.6.0" }
#iceberg-catalog-rest = { version = "0.6.0" }
# forked to handle Utf8View issue
iceberg = { path = "../../iceberg-rust/crates/iceberg" }
iceberg-catalog-rest = { path = "../../iceberg-rust/crates/catalog/rest" }
tpchgen-arrow = { path = "../tpchgen-arrow", version = "1.1.1" }
arrow = { version = "55.2", default-features = false }
parquet = { version = "55.2", default-features = false }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "2.0"
log = "0.4"